--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "@types/node": "^12.19.13",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/recoil": "0.0.1",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-query": "^3.5.16",
+    "react-query": "^2.5.7-tsnext.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "recoil": "^0.1.2",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
