--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "recoil": "^0.1.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
-    "yup": "^0.32.8"
+    "yup": "^0.32.8",
+    "@types/react-router": "^5.1.10",
+    "@types/react-router-dom": "^5.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
